HW3 completed